chapter-3/exercise-2.6/manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-app-ns
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: todo-app-volume
          persistentVolumeClaim:
            claimName: todo-app-pvc
      containers:
        - name: todo-app
          image: ismayilkarimli/devops-with-kubernetes:2.6-app
          volumeMounts:
            - name: todo-app-volume
              mountPath: /usr/src/app/data
