chapter-3/exercise-2.6/manifests/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-app-ns
  name: todo-server-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-server
  template:
    metadata:
      labels:
        app: todo-server
    spec:
      containers:
        - name: todo-server
          image: ismayilkarimli/devops-with-kubernetes:2.6-server
