chapter-3/exercise-2.6/manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-app-ns
  name: todo-app-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - name: app-port
      port: 2345
      protocol: TCP
      targetPort: 8081
