chapter-3/exercise-2.6/manifests/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-app-ns
  name: todo-server-svc
spec:
  type: ClusterIP
  selector:
    app: todo-server
  ports:
    - name: server-port
      port: 2345
      protocol: TCP
      targetPort: 8081
